--- a/shopeasy/package.json
+++ b/shopeasy/package.json
@@ -1,8 +1,10 @@
-{
+{"homepage" : "http://deepumandal.github.io/economic-nest-8248/"
   "name": "shopeasy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+ "predeploy" : "npm run build",
+ "deploy" : "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -15,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@next-auth/firebase-adapter": "^1.0.2",
     "axios": "^1.1.3",
+    "gh-pages" : "^4.0.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "fast-two-sms": "^3.0.0",
